--- a/template/manifest.json
+++ b/template/manifest.json
@@ -1,21 +1,24 @@
 {
-    "manifest_version": 3,
-    "name": "Google Chome",
-    "description": "Description",
-    "version": "1.0",
-    "icons":{
-        "16":"image/icon.png",
-        "48":"image/icon.png",
-        "128":"image/icon.png"
-    },
-    "action": {
-        "default_popup":"index.html",
-        "default_icon": "image/icon.png"
-    },
-    "content_scripts": [
-        {
-            "matches": ["*://kaihu51.com/"],
-            "js": ["js/ip.js"]
-        }
-    ]
+  "manifest_version": 3,
+  "name": "Google Chome",
+  "description": "Description",
+  "version": "1.0",
+  "icons": {
+    "16": "image/icon.png",
+    "48": "image/icon.png",
+    "128": "image/icon.png"
+  },
+  "action": {
+    "default_popup": "index.html",
+    "default_icon": "image/icon.png"
+  },
+  "content_scripts": [
+    {
+      "matches": [
+      ],
+      "js": [
+      ]
+    }
+  ],
+  "host_permissions": []
 }
